9_Build_Web_App/service_result.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: result
  name: result
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 80
  selector:
    run: result
  type: NodePort
status:
  loadBalancer: {}
