9_Build_Web_App/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /vote
        backend:
          serviceName: vote
          servicePort: 5000
      - path: /result
        backend:
          serviceName: result
          servicePort: 5001



# kubectl version 1.21以降の場合のSyntax:
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: voting-app
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /vote
#         pathType: Prefix
#         backend:
#           service:
#             name: vote
#             port: 
#               number: 5000
#       - path: /result
#         pathType: Prefix
#         backend:
#           service:
#             name: result
#             port: 
#               number: 5001
