9_Build_Web_App/ingress_vote.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vote
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 5000


# kubectl version 1.21以降の場合のSyntax:
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: vote
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: vote
#             port: 
#               number: 5000
